# pingpong

./: CMakeLists.txt
.cache/clangd/index/: main.cpp.6A0247BEF3314B8D.idx
src/: CMakeLists.txt  ball.cpp  ball.hpp  common.hpp  main.cpp  paddle.cpp  paddle.hpp
